# auto-download-py

./: .env  .env.example  .gitignore  AGENT.md  README.md  SKILL.md  pyproject.toml
.run/: auto-download-py.run.xml
app/: main.py
app/api/: browser.py  business.py  desktop.py  rpa.py
app/browser/: manager.py  rpa_locator_backend.py
app/core/: asyncio_policy.py  config.py  logging_config.py
app/db/: session.py
app/desktop/: windows_manager.py
app/mappers/: __init__.py  browser_page_config_mapper.py  browser_page_mapper.py  browser_window_mapper.py
app/models/: __init__.py  browser_page.py  browser_page_config.py  browser_window.py
app/schemas/: browser.py  common.py  desktop.py  rpa.py
app/services/: browser_service.py  business_common_service.py  business_image_click_service.py  business_service.py  desktop_service.py  visual_service.py
app/utils/: http_utils.py  (+2 more)
browser-extension/: README.md
docs/: README.md  api-call-chain.md  architecture.md  dependency-graph.md  development-guide.md  key-classes-functions.md  rpa-common-methods.md
scripts/: check_db.py  demo_browser.py  demo_desktop.py  demo_hybrid.py  e2e_test.py  local_service_demo.py  run_dev.bat  run_prod.bat  smoke_test.py
skills/: README.md  browser-service.md  business-image-click.md  commit-rules.md  desktop-service.md  page-operations.md  rpa-common-methods.md  visual-service.md
sql/: auto_download.sql
tests/: test_browser_api.py  test_business_services.py  test_desktop_api.py  test_health_api.py  test_page_flow.py  test_rpa_data_service.py  test_schemas.py  test_utils.py
(+21 files in other folders)
